--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,16 +32,16 @@ dependencies:
     sdk: flutter
   flutter_localizations: 
     sdk: flutter
-  intl: any
+  intl: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  provider:
-  shared_preferences:
-  gradient_borders:
-  flutter_svg:
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  gradient_borders: ^1.0.1
+  flutter_svg: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
