--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.2.3
   gradient_borders: ^1.0.1
   flutter_svg: ^2.0.10+1
+  skeletonizer: ^1.3.0
 
   http: ^1.2.1
   pinput: ^5.0.0
