--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   gradient_borders: ^1.0.1
   flutter_svg: ^2.0.10+1
   skeletonizer: ^1.3.0
+  equatable: ^2.0.5
 
   http: ^1.2.1
   pinput: ^5.0.0
